# Country-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/: graph.py  state.py  tools.py
agent/nodes/: fetch.py  intent.py  synthesise.py
api/: app.py
config/: settings.py
tests/: test_agent.py
